Add footer section for privacy policy links
Added a footer section with policy links to the index.html file.

--- a/index.html
+++ b/index.html
@@ -431,6 +431,14 @@
 
     </div>
 
+    <!-- New Footer Section for Policy Links -->
+    <footer class="mt-12 py-4 text-center border-t border-gray-700 bg-gray-900">
+        <p class="text-gray-500 text-sm">
+            © 2025 Solo Toolbox | 
+            <a href="privacy.txt" class="text-sm hover:underline text-gray-400 ml-4">Privacy Policy</a>
+        </p>
+    </footer>
+    
     <!-- Main JavaScript Logic (Unchanged from previous version, just included for completeness) -->
     <script>
         // --- Global Utility Functions ---
